[gd_scene load_steps=3 format=2]

[ext_resource path="res://main/Creds.gd" type="Script" id=1]
[ext_resource path="res://UI/SkiddleUI.tres" type="Theme" id=2]

[node name="Vault" type="VBoxContainer"]
margin_right = 994.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 994.0
margin_bottom = 45.0

[node name="Label2" type="Label" parent="HBoxContainer"]
margin_right = 402.0
margin_bottom = 45.0
size_flags_horizontal = 3

[node name="Label" type="LineEdit" parent="HBoxContainer"]
visible = false
margin_left = 46.0
margin_right = 805.0
margin_bottom = 55.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
text = "Label"

[node name="Button2" type="Button" parent="HBoxContainer"]
modulate = Color( 0.603922, 0.603922, 0.603922, 1 )
margin_left = 406.0
margin_right = 448.0
margin_bottom = 45.0
text = "―"

[node name="ColorRect" type="ColorRect" parent="HBoxContainer"]
margin_left = 452.0
margin_right = 502.0
margin_bottom = 45.0
rect_min_size = Vector2( 50, 0 )
color = Color( 0.0392157, 0.0392157, 0.0392157, 1 )

[node name="Label3" type="Label" parent="HBoxContainer"]
margin_left = 506.0
margin_right = 908.0
margin_bottom = 45.0
size_flags_horizontal = 3
text = "*************"

[node name="Label4" type="LineEdit" parent="HBoxContainer"]
visible = false
margin_left = 641.0
margin_right = 907.0
margin_bottom = 55.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
text = "Label"
secret = true

[node name="Button3" type="Button" parent="HBoxContainer"]
modulate = Color( 0.603922, 0.603922, 0.603922, 1 )
margin_left = 912.0
margin_right = 954.0
margin_bottom = 45.0
text = "―"

[node name="Button4" type="Button" parent="HBoxContainer"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 958.0
margin_right = 994.0
margin_bottom = 45.0
text = "-"

[connection signal="focus_exited" from="HBoxContainer/Label" to="." method="_on_Label_focus_exited"]
[connection signal="text_changed" from="HBoxContainer/Label" to="." method="_on_Label_text_changed"]
[connection signal="text_entered" from="HBoxContainer/Label" to="." method="_on_Label_text_entered"]
[connection signal="pressed" from="HBoxContainer/Button2" to="." method="_on_Button_pressed"]
[connection signal="focus_exited" from="HBoxContainer/Label4" to="." method="_on_Labeled_focus_exited"]
[connection signal="text_entered" from="HBoxContainer/Label4" to="." method="_on_Labeled_text_entered"]
[connection signal="pressed" from="HBoxContainer/Button3" to="." method="_on_Button3es_pressed"]
[connection signal="pressed" from="HBoxContainer/Button4" to="." method="_on_Button4_pressed"]
